<resources>
    <!-- App name -->
    <string name="app_name">Events Around</string>

    <!-- DetailActivity title -->
    <string name="event">Event</string>

    <!-- AddEventActivity title -->
    <string name="title_add_event">Add event</string>

    <!-- Hints -->
    <string name="event_title_hint">Title</string>
    <string name="event_description_hint">Description</string>
    <string name="event_location_hint">Location</string>
    <string name="event_date_hint">Ends date</string>
    <string name="event_time_hint">Ends time</string>
    <!-- Sign-In hint -->
    <string name="sign_in_to_continue">Sign In to continue</string>

    <!-- AddEventActivity text -->
    <string name="menu_done">Done</string>
    <string name="required_field">Required field</string>

    <!-- Bottom menu items -->
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>

    <!-- Menu items -->
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <!-- User -->
    <string name="user_name">Anonymous</string>

    <!-- Settings dialog -->
    <string name="setting_search_radius_title">Event search radius</string>
    <string name="setting_search_radius_message">Set the search radius, km:</string>

    <!-- Map info window -->
    <string name="more_info">More info</string>

    <!-- Events date and time -->
    <string name="default_time">23 : 59</string>
    <string name="ends_date_time">Ends on %1$s at %2$s</string>
    <string name="ended_date_time">Ended on %1$s at %2$s</string>

    <string name="delete">DELETE</string>
    <string name="bullet">\u2022</string>

    <!-- Text for contentDescription -->
    <string name="title">Title</string>
    <string name="event_type">Event type</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="arrow_right">Right arrow button</string>
    <string name="description">Description</string>
    <string name="app_logo">Logo</string>

    <!-- Text to handle errors -->
    <string name="places_api_failure">Places API failure! Check the API is enabled for your key</string>
    <string name="google_play_services">Please install Google Play Services!</string>
    <string name="google_play_services_error">Google Play Services error.</string>
    <string name="google_signin_failed">Google Sign-In failed.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

    <!-- Error messages -->
    <string name="internet_error_title">Internet Connection Error</string>
    <string name="internet_error_message">Please connect to working Internet connection</string>
    <string name="location_error_title">Location Service Error</string>
    <string name="location_error_message">Please turn on device location, which uses Google\'\s location service</string>

    <!-- AlertDialog button -->
    <string name="retry">Retry</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <!-- Text for sharing feature -->
    <string name="share">Share</string>
    <string name="choose_sharing_method">Choose sharing method</string>
    <string name="address">Address:</string>
    <string name="description_text">Description:</string>

    <!-- Widget. Text to handle empty list -->
    <string name="empty_string">The events list is empty</string>

    <!-- EventType. First item use only in spinner on AddEventActivity -->
    <string-array name="events_type">
        <item>Select an event type…</item>
        <item>Holiday</item>
        <item>Conference</item>
        <item>Meeting</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Game</item>
        <item>Warning</item>
        <item>Other</item>
    </string-array>
</resources>
